# fuel-contracts

./: .gitignore  Cargo.toml  Forc.toml  README.md  build.sh  mailbox_indexer.wasm  run_tests.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
bytes-extended/: Forc.toml
bytes-extended-test/: Cargo.toml  Forc.toml
bytes-extended-test/src/: main.sw
bytes-extended-test/tests/: harness.rs
bytes-extended/src/: main.sw  mem.sw
contracts/bytes-extended/: Forc.toml
contracts/bytes-extended/src/: main.sw  mem.sw
contracts/hyperlane-interfaces/: Forc.toml
contracts/hyperlane-interfaces/src/: igp.sw  lib.sw  main.sw  ownable.sw
contracts/hyperlane-ism-test/: Forc.toml
contracts/hyperlane-ism-test/src/: main.sw
contracts/hyperlane-mailbox/: Cargo.toml  Forc.toml
contracts/hyperlane-mailbox/src/: main.sw
contracts/hyperlane-mailbox/tests/: harness.rs
contracts/hyperlane-message/: Forc.toml
contracts/hyperlane-message-test/: Cargo.toml  Forc.toml
contracts/hyperlane-message-test/src/: main.sw
contracts/hyperlane-message-test/tests/: harness.rs
contracts/hyperlane-message/src/: main.sw
contracts/hyperlane-msg-recipient-test/: Forc.toml
contracts/hyperlane-msg-recipient-test/src/: main.sw
contracts/igp/interchain-gas-paymaster/: Cargo.toml  Forc.toml
contracts/igp/interchain-gas-paymaster-test/: Forc.toml
contracts/igp/interchain-gas-paymaster-test/src/: main.sw
contracts/igp/interchain-gas-paymaster/src/: interface.sw  main.sw
contracts/igp/interchain-gas-paymaster/tests/: harness.rs
contracts/igp/overhead-igp/: Cargo.toml  Forc.toml
contracts/igp/overhead-igp/src/: interface.sw  main.sw
contracts/igp/overhead-igp/tests/: harness.rs
contracts/igp/storage-gas-oracle/: Cargo.toml  Forc.toml
contracts/igp/storage-gas-oracle/src/: interface.sw  main.sw
contracts/igp/storage-gas-oracle/tests/: harness.rs
contracts/interchain-gas-paymaster/: Cargo.toml  Forc.toml
contracts/interchain-gas-paymaster/src/: interface.sw  main.sw
contracts/interchain-gas-paymaster/tests/: harness.rs
contracts/merkle/: Forc.toml  README.md
contracts/merkle-test/: Cargo.toml  Forc.toml  README.md
contracts/merkle-test/src/: main.sw
contracts/merkle-test/tests/: harness.rs  test_cases.json
contracts/merkle/src/: main.sw
contracts/multisig-ism/: Cargo.toml  Forc.toml
contracts/multisig-ism-metadata/: Forc.toml
contracts/multisig-ism-metadata-test/: Cargo.toml
contracts/multisig-ism-metadata-test/src/: main.sw
contracts/multisig-ism-metadata-test/tests/: harness.rs
contracts/multisig-ism-metadata/src/: main.sw
contracts/multisig-ism/src/: interface.sw  main.sw
contracts/multisig-ism/tests/: harness.rs
contracts/ownership/src/: interface.sw  main.sw
contracts/pause/: Forc.toml
contracts/pause-test/: Cargo.toml  Forc.toml
contracts/pause-test/src/: main.sw
contracts/pause-test/tests/: harness.rs
contracts/pause/src/: interface.sw  lib.sw  storage.sw
contracts/std-lib-extended/: Forc.toml
contracts/std-lib-extended/src/: auth.sw  bytes.sw  lib.sw  main.sw  mem.sw  option.sw  result.sw  u256.sw
contracts/storage-gas-oracle/: Cargo.toml  Forc.toml
contracts/storage-gas-oracle/src/: main.sw
contracts/storage-gas-oracle/tests/: harness.rs
contracts/validator-announce/: Cargo.toml  Forc.toml
contracts/validator-announce/src/: digest.sw  interface.sw  main.sw  signature.sw  storable_string.sw
contracts/validator-announce/tests/: harness.rs
deploy/: README.md  package.json  tsconfig.json
deploy/src/: deploy.ts
deploy/types/: HyperlaneMailboxAbi.d.ts  index.ts
deploy/types/factories/: HyperlaneMailboxAbi__factory.ts
hyperlane-interfaces/: Forc.toml
hyperlane-interfaces/src/: main.sw
hyperlane-ism-test/src/: main.sw
hyperlane-mailbox/: Cargo.toml  Forc.toml  README.md
hyperlane-mailbox-test/: Forc.toml
hyperlane-mailbox-test/src/: main.sw
hyperlane-mailbox/src/: interface.sw  main.sw  message.sw
hyperlane-mailbox/tests/: harness.rs
hyperlane-message/: Forc.toml
hyperlane-message-test/: Cargo.toml
hyperlane-message-test/src/: main.sw
hyperlane-message-test/tests/: harness.rs
hyperlane-message/src/: main.sw  packed_bytes.sw  word_buffer.sw
hyperlane-msg-recipient-test/src/: main.sw
indexer/mailbox/: Cargo.toml  README.md  build-wasm.sh  mailbox.manifest.yaml  mailbox.wasm
indexer/mailbox/schema/: mailbox.schema.graphql
indexer/mailbox/src/: abi-attempt.json  encode.rs  lib.rs  message.rs
merkle-test/: Cargo.toml
merkle-test/src/: main.sw
merkle-test/tests/: harness.rs
merkle/src/: main.sw
multisig-ism/: Cargo.toml  Forc.toml
multisig-ism-metadata/: Forc.toml
multisig-ism-metadata-test/: Cargo.toml  Forc.toml
multisig-ism-metadata-test/src/: main.sw
multisig-ism-metadata-test/tests/: harness.rs
multisig-ism-metadata/src/: main.sw
multisig-ism/src/: interface.sw  main.sw  metadata.sw
multisig-ism/tests/: harness.rs
ownership/: Forc.toml
ownership/src/: interface.sw  main.sw
test-utils/: Cargo.toml
test-utils/src/: lib.rs
