[workspace]

members = [
    "contracts/hyperlane-mailbox",
    "contracts/hyperlane-message-test",
    "contracts/igp/interchain-gas-paymaster",
    "contracts/igp/overhead-igp",
    "contracts/igp/storage-gas-oracle",
    "contracts/merkle-test",
    "contracts/multisig-ism",
    "contracts/multisig-ism-metadata-test",
    "contracts/validator-announce",
    "test-utils",
]
exclude = [
    # Cargo doesn't allow for packages to have different build targets.
    # indexer/mailbox must be compiled for the wasm target and requires some
    # special logic when being compiled.
    # Build this package by running `./indexer/mailbox/build-wasm.sh` instead.
    "indexer/mailbox",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hyperlane-xyz/fuel-contracts"
authors = ["Abacus Works"]

[workspace.dependencies]
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-02-10-01" }
fuels = { git = "https://github.com/FuelLabs/fuels-rs", rev = "f5d08d6" }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "930cded" }
hyperlane-ethereum = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "930cded" }
tokio = { version = "1.12" }
