[package]
name = "hyperlane-mailbox"
description = "A Sway implementation of the Hyperlane Mailbox contract"
version = "0.1.0"
edition = "2021"
authors = ["Trevor Porter <trevor@hyperlane.xyz>"]
license = "Apache-2.0"

[dev-dependencies]
ethers = { workspace = true, default-features = false, features = ['legacy'] }
fuels = { workspace = true, features = ["fuel-core-lib"] }
hyperlane-core = { workspace = true }
test-utils = { path = "../test-utils" }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
