[package]
name = "hyperlane-mailbox"
description = "A Sway implementation of the Hyperlane Mailbox contract"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dev-dependencies]
ethers = { workspace = true, default-features = false, features = ['legacy'] }
fuels = { workspace = true, features = ["fuel-core-lib"] }
hyperlane-core = { workspace = true }
test-utils = { path = "../test-utils" }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
