[package]
name = "hyperlane-message-test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Trevor Porter <trkporter@ucdavis.edu>"]
license = "Apache-2.0"

[dev-dependencies]
# Default to hyperlane-core's version
ethers = "*"
fuels = { version = "0.32", features = ["fuel-core-lib"] }
hex = "0.4.3"
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "ee075b1" }
test-utils = { path = "../test-utils" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
