[package]
name = "hyperlane-message-test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Trevor Porter <trkporter@ucdavis.edu>"]
license = "Apache-2.0"

[dev-dependencies]
ethers = { workspace = true, default-features = false, features = ['legacy'] }
fuels = { workspace = true, features = ["fuel-core-lib"] }
hex = "0.4.3"
hyperlane-core = { workspace = true }
test-utils = { path = "../test-utils" }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
