[package]
name = "multisig-ism-metadata-test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Trevor Porter <trkporter@ucdavis.edu>"]
license = "Apache-2.0"

[dev-dependencies]
ethers = "*"
fuels = { version = "0.32", features = ["fuel-core-lib"] }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "ffe1073" }
sha3 = "0.9.1"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
