[package]
name = "multisig-ism-metadata-test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Trevor Porter <trevor@hyperlane.xyz>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.33", features = ["fuel-core-lib"] }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "ee075b1" }
sha3 = "0.9.1"
test-utils = { path = "../test-utils" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
