[package]
name = "hyperlane-multisig-ism"
description = "An implementation of the Hyperlane Multisig ISM."
version = "0.1.0"
edition = "2021"
authors = ["Yorke Rhodes <yorke@hyperlane.xyz>"]
license = "Apache-2.0"

[dev-dependencies]
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2022-12-05-01", default-features = false, features = ['legacy'] }
fuels = { version = "0.33", features = ["fuel-core-lib"] }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "ee075b1" }
test-utils = { path = "../test-utils" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
