[package]
name = "test-utils"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true, default-features = false, features = ['legacy'] }
hyperlane-ethereum = { workspace = true }
hyperlane-core = { workspace = true }
fuels = { workspace = true, features = ["fuel-core-lib"] }
serde = "1.0.147"
serde_json = "1.0"
