[package]
name = "hyperlane-message-test"
description = "Tests for hyperlane-message"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dev-dependencies]
ethers = { workspace = true, default-features = false, features = ['legacy'] }
fuels = { workspace = true, features = ["fuel-core-lib"] }
hex = "0.4.3"
hyperlane-core = { workspace = true }
test-utils = { path = "../../test-utils" }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
