[package]
name = "mailbox-indexer"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-macros = { version = "=0.1.12", default-features = false }
fuel-indexer-plugin = { version = "=0.1.12" }
fuel-indexer-schema = { version = "=0.1.12", default-features = false }
fuel-tx = "=0.23.1"
fuels-core = "=0.30.0"
fuels-types = "=0.30.0"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
